` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/UpdateProtocolStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title Update State Transitions

[*] --> NEW
ACCEPTED --> ACCEPTED_COMMAND_CREATED: PROTOCOL_MESSAGE
ACCEPTED --> COMPLETED_IMMEDIATELY: COMPLETE
ACCEPTED_COMMAND_CREATED --> ACCEPTED_COMMAND_RECORDED: WORKFLOW_EXECUTION_UPDATE_ACCEPTED
ACCEPTED_COMMAND_CREATED --> COMPLETED_IMMEDIATELY_COMMAND_CREATED: COMPLETE
ACCEPTED_COMMAND_RECORDED --> COMPLETED: COMPLETE
COMPLETED --> COMPLETED_COMMAND_CREATED: PROTOCOL_MESSAGE
COMPLETED_COMMAND_CREATED --> COMPLETED_COMMAND_RECORDED: WORKFLOW_EXECUTION_UPDATE_COMPLETED
COMPLETED_IMMEDIATELY --> COMPLETED_IMMEDIATELY_COMMAND_CREATED: PROTOCOL_MESSAGE
COMPLETED_IMMEDIATELY_COMMAND_CREATED --> COMPLETED_IMMEDIATELY_COMMAND_RECORDED: PROTOCOL_MESSAGE
COMPLETED_IMMEDIATELY_COMMAND_RECORDED --> COMPLETED_COMMAND_CREATED: WORKFLOW_EXECUTION_UPDATE_ACCEPTED
NEW --> REQUEST_INITIATED: UPDATE_V1
REQUEST_INITIATED --> ACCEPTED: ACCEPT
REQUEST_INITIATED --> COMPLETED_COMMAND_RECORDED: REJECT
COMPLETED_COMMAND_RECORDED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
